tests/files/flow_controller_tests/should_run/031.cmdr
x = parseInt(false);
print x;