tests/files/flow_controller_tests/should_fail/054.cmdr
x = false;
print sec(x);